# PyVkGraphCollect

./: .gitignore  README.md  asyncio_test.py  collect.py  credentials.py  db.py  db_manage.py  delta.py  networkx_test.py  requirements.txt  statistics.py  user.py  vk_config.v2.json
PyVkCollect/: README.md  build_graph.py  collect.py  db.py  delta.py  user.py  vk_config.v2.json
rust/pyext/: Cargo.toml
rust/pyext/src/: lib.rs
